# ALICE-LOL

./: .gitignore  Cargo.toml  LLM_PRINT_PROMPT.md  LLM_REFERENCE.md  README.ja.md  README.md  SPEC.md  gem.fbx  shield.fbx
.github/workflows/: ci.yml
alice-lol/: Cargo.toml
alice-lol-macro/: Cargo.toml
alice-lol-macro/src/: lib.rs
alice-lol/examples/: alice_coaster.rs  autodiff_demo.rs  basic.rs  compiled_demo.rs  law_demo.rs  print_demo.rs  print_export.rs  print_verify.rs  pruning_demo.rs  roblox_accessory.rs  royal_crown.rs  showcase.rs
alice-lol/src/: laser_pattern.rs  law.rs  lib.rs  print_export.rs  pruned_compile.rs  roblox_export.rs  runtime_parser.rs
alice-lol/tests/: compile_tests.rs  law_tests.rs  print_tests.rs  pruning_tests.rs  v04_tests.rs  v05_capture_tests.rs
docs/: ROBLOX_PIPELINE.md
